style.css
*  {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* =================== Section Top ==================== */

.section-top {
    height: 20vh;
    background-color: red;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-top {
    width: 50%;
}

.ul-nav-top {
    display: flex;
    width: 100%;
    list-style: none;
    justify-content: space-between;
    height: 10vh;
    align-items: center;
}

/* =================== Section Middle ==================== */

.section-middle {
    height: 60vh;
    background-color: blueviolet;
}

.container-middle-upper {
    height: 30vh;
}

.container-img {
    height: 100%;
    width: 30vw;
}

.container-text {
    height: 100%;
    width: 20vw;
}

p {
    font-size: 1.5rem;
    height: 60%;
    text-align: center;
}

img {
    height: 100%;
    width: 100%;
    object-fit: contain;
}
/* =================== Section Bottom ==================== */

.section-bottom {
    height: 20vh;
    background-color: blue;
}

footer {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.container-footer-left {
    display: flex;
}

.nav-bottom {
    display: flex;
    width: 30vw;
}

.ul-nav-bottom {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.li-menu-bottom:hover {
    color: green;
    cursor: pointer;
}   

